[package]
name = "pass_norm"
version = "0.1.0"
authors = ["amishaa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bincode = ""
bloom = ""
serde = {version = "", features = ["derive"]}
serde_json = ""
siphasher = { version = "", features = ["serde"] }
bloomfilter = ""
